fixed spacing at top of page, moved button

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a {
 }
 
 h1 {
-	font-size: 1.800em;
+	font-size: 1.600em;
 	letter-spacing: -1.5px;
 	font-family: 'Mate SC', serif;
 }
@@ -29,7 +29,7 @@ h2 {
 	font-size: 2.250em;
 	text-align: left;
 	margin-left: -128px;
-	margin-top: 25px;
+	margin-top: 40px;
 }
 
 #logo {
@@ -39,7 +39,7 @@ h2 {
 
 #fox_head {
 	width: 200px;
-	margin: 10px 0 -100px 65px;
+	margin: -10px 20px -120px 65px;
 }
 
 .book {
@@ -49,11 +49,12 @@ h2 {
 .btn {
 	color: #EDCB9E;
 	background: #6E2525;
-	margin: 40px 0px;
-	padding: 11px 30px;
+	margin: -50px 220px 0 0;
+	padding: 5px 15px;
 	border-radius: 25px;
 	font-family: 'Meddon', serif;
 	font-size: 1.250em;
+	float: right;
 }
 
 .btn:hover {
@@ -98,23 +99,23 @@ ul.nav li a {
 }
 
 #intro {
-	margin: 0px 0 75px 0;
+	margin: -30px 0 75px 0;
 }
 
-#new-cupcakes img {
+#d_and_d img {
 	border: 8px solid #993333;
 /*	margin: 0px 0 20px 0; */
 }
 
-#new-cupcakes{
-	margin-top: -30px;
+#d_and_d {
+	margin-top: -50px;
 }
 
-#featured-cupcake {
-	margin-top: -30px;
+#poetry {
+	margin-top: -50px;
 }
 
-#featured-cupcake img {
+#poetry img {
 	border: 8px solid #993333;
 }
 
